--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,7 @@
 @import './base.css';
 
 @media (hover: hover) {
-  a:hover {
-  }
+	a:hover {}
 }
 
-@media (min-width: 1024px) {
- 
-}
+@media (min-width: 1024px) {}
